src/snapshots/tptp__tests__annotated_formula.snap
---
source: src/tests.rs
expression: parsed
---
Fof(
    FofAnnotated(
        Annotated {
            name: AtomicWord(
                Lower(
                    LowerWord(
                        "test",
                    ),
                ),
            ),
            role: FormulaRole(
                LowerWord(
                    "axiom",
                ),
            ),
            formula: Formula(
                Unitary(
                    Atomic(
                        Defined(
                            Plain(
                                DefinedPlainFormula(
                                    DefinedPlainTerm(
                                        DefinedConstant(
                                            DefinedFunctor(
                                                AtomicDefinedWord(
                                                    DollarWord(
                                                        LowerWord(
                                                            "true",
                                                        ),
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
            annotations: Annotations(
                None,
            ),
        },
    ),
)
