src/snapshots/tptp__tests__atomic_defined_word.snap
---
source: src/tests.rs
expression: parsed

---
AtomicDefinedWord(
    DollarWord(
        LowerWord(
            "atomic",
        ),
    ),
)
