src/snapshots/tptp__tests__atomic_word-3.snap
---
source: src/tests.rs
expression: parsed
---
SingleQuoted(
    SingleQuoted(
        "single quoted",
    ),
)
