src/snapshots/tptp__tests__cnf_formula-3.snap
---
source: src/tests.rs
expression: parsed
---
Parenthesised(
    Disjunction(
        [
            Atomic(
                Plain(
                    PlainAtomicFormula(
                        Constant(
                            Constant(
                                Functor(
                                    Lower(
                                        LowerWord(
                                            "p",
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ],
    ),
)
